# mcp-a2a-aoa

./: .dockerignore  Agent oriented architecture.md  CLAUDE.md  README.md  aoa-blog-plan.md  main.py  part1-plan.md  pyproject.toml  stage3_a2a_implementation_plan.md  stage3_salvage_analysis.md
blog_posts/: stage1_mcp_foundation.md  stage2_smol_agents.md  stage3_a2a_phoenix.md  stage3_a2a_protocol.md  stage3_multi_agent_observability.md  stage4_aoa_vision.md
stage1_mcp_product_server/: README.md  __init__.py  database.py  product_catalog.db  server.py  server_fastmcp.py
stage1_mcp_product_server/tests/: __init__.py  test_database.py  test_server.py  test_server_fastmcp.py
stage2_product_agent/: .env.example  Dockerfile  README.md  __init__.py  agent.py  agno_agent.py  docker-compose.yml  dual_agent_runner.py
stage2_product_agent/tests/: __init__.py  benchmark.py  debug_agno.py  test_agent.py  test_agno_agent.py  test_dual_runner.py  test_mcp_integration.py  test_product_tools.py
stage2_product_agent/tools/: __init__.py  product_tools.py
stage3_multi_agent/: .env.example  A2A_FIXES_SUMMARY.md  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  OPERATIONS.md  README.md  TELEMETRY.md  TELEMETRY_SETUP_GUIDE.md  TROUBLESHOOTING_GUIDE.md  WEB_UI_INTEGRATION.md  demo.Dockerfile  demo_agent_communication.py  deploy_with_telemetry.sh  docker-compose.yml  env.telemetry.example  health_check.py  inventory.Dockerfile  product.Dockerfile  sales.Dockerfile  test_agent_fixes.py
stage3_multi_agent/a2a_protocol/: __init__.py  agent_server.py  base_agent.py  discovery.py  (+1 more)
(+57 files in other folders)
